HW1: fix: UI  delete: GenerateId, MealService  refactor: MealDao, MealTo, MealDao, MealDaoInMemoryImpl, users.jsp, Meal  feat meals.jsp & MealServlet add browser depending behavior

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,13 +2,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Java Enterprise (Topjava)</title>
+    <link href="./resources/css/style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
-<hr>
-<ul>
-    <li><a href="users">Users</a></li>
-    <li><a href="meals">Meals</a></li>
-</ul>
+<div id="bkg">
+    <h3 id="header_text"><a href="https://github.com/JavaWebinar/topjava" style="font-size: 70%" target="_blank">Проект
+        Java Enterprise (Topjava)</a></h3>
+    <div id="meals-layer">
+        <a href="meals"><img class="scale" height="500" src="resources/img/meals.png" width="600"></a>
+    </div>
+    <div id="users-layer">
+        <a href="users"><img class="scale" height="680" src="resources/img/users.png" width="900"></a>
+    </div>
+</div>
 </body>
 </html>
